ipc/ipdl/test/ipdl/error/unknownIntrMessage.ipdl
//error: Unknown sync IPC message unknownIntrMessage::Msg

[ChildProc=any]
intr protocol unknownIntrMessage {
parent:
    [LegacyIntr] intr Msg();
};
